mdapipkg/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Act_On_Behavior_Score__c</fullName>
        <label>Act-On Behavior Score</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity_Counter__c</fullName>
        <label>Activity Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Add_Waiver_Request_comments_or_cl__c</fullName>
        <label>Add Waiver Req comments or clarification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Qualifying_Company_Names__c</fullName>
        <inlineHelpText>The names of additional qualifying companies when more than one company will be part of qualification.</inlineHelpText>
        <label>Additional Qualifying Company Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Alternate Home</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                    <default>true</default>
                    <label>Business</label>
                </value>
                <value>
                    <fullName>Alternate Business</fullName>
                </value>
                <value>
                    <fullName>Corresponding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age_Group_Leads__c</fullName>
        <formula>IF(ISBLANK(Birthdate__c), &quot;Others&quot;, 
IF((TODAY() - Birthdate__c) / 365 &lt; 30, &quot;Ages 29 or Less&quot;, 
IF((TODAY() - Birthdate__c) / 365 &gt;= 30 &amp;&amp; (TODAY() - Birthdate__c) / 365 &lt; 36, &quot;Ages 30 - 35&quot;, 
IF((TODAY() - Birthdate__c) / 365 &gt;= 36 &amp;&amp; (TODAY() - Birthdate__c) / 365 &lt; 41, &quot;Ages 36 - 40&quot;, 
IF((TODAY() - Birthdate__c) / 365 &gt;= 41 &amp;&amp; (TODAY() - Birthdate__c) / 365 &lt; 46, &quot;Ages 41 - 45&quot;, 
IF((TODAY() - Birthdate__c) / 365 &gt;= 46 &amp;&amp; (TODAY() - Birthdate__c) / 365 &lt; 50, &quot;Ages 46 - 49&quot;, 
IF((TODAY() - Birthdate__c) / 365 &gt;= 50 &amp;&amp; (TODAY() - Birthdate__c) / 365 &lt; 56, &quot;Ages 50 - 55&quot;, 
IF((TODAY() - Birthdate__c) / 365 &gt;= 56 &amp;&amp; (TODAY() - Birthdate__c) / 365 &lt; 61, &quot;Ages 56 - 60&quot;, 
IF((TODAY() - Birthdate__c) / 365 &gt;= 61 &amp;&amp; (TODAY() - Birthdate__c) / 365 &lt; 69, &quot;Ages 61 - 69&quot;, 
IF((TODAY() - Birthdate__c) / 365 &gt;= 70, &quot;Ages 70+&quot;, &quot;Others&quot;))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age Group Leads</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_Question_1__c</fullName>
        <inlineHelpText>Please provide the reason/s that the candidate did not join YPO prior to his/her 45th birthday?  Please provide Details.</inlineHelpText>
        <label>Reason for Age Waiver</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Age_Question_2__c</fullName>
        <inlineHelpText>Please share the actions that the chapter leadership plans to take to accelerate the integration of the candidate in YPO considering he/she is joining after the age of 45. i.e. forum placement, day chair etc.</inlineHelpText>
        <label>Age Integration Access</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>FLOOR((TODAY() - Birthdate__c )/365.2425)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>All_Question_1__c</fullName>
        <inlineHelpText>What unique value the prospective member brings to the Chapter and YPO-WPO that justify an exception to the requirements? Please elaborate.</inlineHelpText>
        <label>Unique Member Value</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>All_Question_2__c</fullName>
        <inlineHelpText>What level of participation and contribution the prospective member brings to the Chapter and YPO-WPO that justify an exception to the requirements? Please elaborate</inlineHelpText>
        <label>Member Contribution</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue_Opp__c</fullName>
        <description>Duplicate to map to opportunity on conversion</description>
        <label>Annual Revenue (Opp)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Applied_To_Chapter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applied To Chapter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate (DD/MM/YYYY)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Description__c</fullName>
        <label>Business Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Fax_Country_Code__c</fullName>
        <label>Business Fax Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Phone_Country_Code__c</fullName>
        <label>Business Phone Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Phone_Ext__c</fullName>
        <label>Business Phone Ext.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Phone__c</fullName>
        <label>Business Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Business_Scope__c</fullName>
        <label>Business Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_Approval__c</fullName>
        <label>CC Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_Email__c</fullName>
        <label>CC Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CMO_Approval__c</fullName>
        <label>CMO Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMO_Email__c</fullName>
        <label>CMO Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Certification_Type_Opp__c</fullName>
        <defaultValue>&quot;Third Party Certify&quot;</defaultValue>
        <description>This sets Third Party Certify on conversion</description>
        <label>Certification Type (Opp)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chapter_Administrator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chapter Administrator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chapter_Approval_Requested_Date__c</fullName>
        <label>Chapter Approval Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Chapter_Health_Activity_Boolean__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chapter Health Activity Boolean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chapter_Membership_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chapter Membership Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chpter_Chair__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chapter Chair</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Code_of_Conduct_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Code of Conduct Accepted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corp_Type__c</fullName>
        <inlineHelpText>If Corporation Type = Sales/Service/Manufacturing the Dollar Volume should be Annual Revenue
If Corporation Type = Financial the Dollar Volume should be Annual Assets
If Corporation Type = Agency the Dollar Volume should be Annual Fees or Commissions</inlineHelpText>
        <label>Corporation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Financial Institution</fullName>
                </value>
                <value>
                    <fullName>Agency-type</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_By_Custom__c</fullName>
        <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp;  CreatedBy.LastName</formula>
        <label>Created By(Custom)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEPRECATED_Recommended_Chapter__c</fullName>
        <label>DEPRECATED_Recommended Chapter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNQ_A__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is for migration of historical information</description>
        <label>DNQ A (Historical)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DNQ_B__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is for migration of historical information</description>
        <label>DNQ B (Historical)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOB_doc_and_3rd_Party_Info_complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DOB doc and 3rd Party Info complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSAnnComp__c</fullName>
        <formula>&quot;USD$&quot; &amp; CASE(LEN(TEXT(Tot_Empl_Comp__c)), 
1, TEXT(Tot_Empl_Comp__c), 
2, TEXT(Tot_Empl_Comp__c), 
3, TEXT(Tot_Empl_Comp__c), 
4, LEFT(TEXT(Tot_Empl_Comp__c), 1) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Tot_Empl_Comp__c), 3), 
5, LEFT(TEXT(Tot_Empl_Comp__c), 2) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Tot_Empl_Comp__c), 3), 
6, LEFT(TEXT(Tot_Empl_Comp__c), 3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Tot_Empl_Comp__c), 3), 
7, LEFT(TEXT(Tot_Empl_Comp__c), 1) &amp; &quot;,&quot; &amp; MID(TEXT(Tot_Empl_Comp__c), 2,3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Tot_Empl_Comp__c), 3), 
8, LEFT(TEXT(Tot_Empl_Comp__c), 2) &amp; &quot;,&quot; &amp; MID(TEXT(Tot_Empl_Comp__c), 3,3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Tot_Empl_Comp__c), 3), 
9, LEFT(TEXT(Tot_Empl_Comp__c), 3) &amp; &quot;,&quot; &amp; MID(TEXT(Tot_Empl_Comp__c), 4,3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Tot_Empl_Comp__c), 3), 
10, LEFT(TEXT(Tot_Empl_Comp__c), 1) &amp; &quot;,&quot; &amp; MID(TEXT(Tot_Empl_Comp__c), 2,3) &amp; &quot;,&quot; &amp; MID(TEXT(Tot_Empl_Comp__c), 5, 3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Tot_Empl_Comp__c), 3), 
11, LEFT(TEXT(Tot_Empl_Comp__c), 2) &amp; &quot;,&quot; &amp; MID(TEXT(Tot_Empl_Comp__c), 3,3) &amp; &quot;,&quot; &amp; MID(TEXT(Tot_Empl_Comp__c), 6, 3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Tot_Empl_Comp__c), 3), 
12, LEFT(TEXT(Tot_Empl_Comp__c), 3) &amp; &quot;,&quot; &amp; MID(TEXT(Tot_Empl_Comp__c), 4,3) &amp; &quot;,&quot; &amp; MID(TEXT(Tot_Empl_Comp__c), 7, 3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Tot_Empl_Comp__c), 3), 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSAnnComp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSBirthdate__c</fullName>
        <formula>&quot;(&quot;+TEXT(MONTH(Birthdate__c))+&quot;/&quot; +TEXT(DAY(Birthdate__c))+&quot;/&quot; +TEXT(YEAR(Birthdate__c))+&quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSBirthdate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSEntVal__c</fullName>
        <formula>&quot;USD$&quot; &amp; CASE(LEN(TEXT(Ent_Val__c)), 
1, TEXT(Ent_Val__c), 
2, TEXT(Ent_Val__c), 
3, TEXT(Ent_Val__c), 
4, LEFT(TEXT(Ent_Val__c), 1) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Ent_Val__c), 3), 
5, LEFT(TEXT(Ent_Val__c), 2) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Ent_Val__c), 3), 
6, LEFT(TEXT(Ent_Val__c), 3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Ent_Val__c), 3), 
7, LEFT(TEXT(Ent_Val__c), 1) &amp; &quot;,&quot; &amp; MID(TEXT(Ent_Val__c), 2,3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Ent_Val__c), 3), 
8, LEFT(TEXT(Ent_Val__c), 2) &amp; &quot;,&quot; &amp; MID(TEXT(Ent_Val__c), 3,3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Ent_Val__c), 3), 
9, LEFT(TEXT(Ent_Val__c), 3) &amp; &quot;,&quot; &amp; MID(TEXT(Ent_Val__c), 4,3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Ent_Val__c), 3), 
10, LEFT(TEXT(Ent_Val__c), 1) &amp; &quot;,&quot; &amp; MID(TEXT(Ent_Val__c), 2,3) &amp; &quot;,&quot; &amp; MID(TEXT(Ent_Val__c), 5, 3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Ent_Val__c), 3), 
11, LEFT(TEXT(Ent_Val__c), 2) &amp; &quot;,&quot; &amp; MID(TEXT(Ent_Val__c), 3,3) &amp; &quot;,&quot; &amp; MID(TEXT(Ent_Val__c), 6, 3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Ent_Val__c), 3), 
12, LEFT(TEXT(Ent_Val__c), 3) &amp; &quot;,&quot; &amp; MID(TEXT(Ent_Val__c), 4,3) &amp; &quot;,&quot; &amp; MID(TEXT(Ent_Val__c), 7, 3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Ent_Val__c), 3), 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSEntVal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSVolume__c</fullName>
        <formula>&quot;USD$&quot; &amp; CASE(LEN(TEXT(AnnualRevenue)), 
1, TEXT(AnnualRevenue), 
2, TEXT(AnnualRevenue), 
3, TEXT(AnnualRevenue), 
4, LEFT(TEXT(AnnualRevenue), 1) &amp; &quot;,&quot; &amp; RIGHT(TEXT(AnnualRevenue), 3), 
5, LEFT(TEXT(AnnualRevenue), 2) &amp; &quot;,&quot; &amp; RIGHT(TEXT(AnnualRevenue), 3), 
6, LEFT(TEXT(AnnualRevenue), 3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(AnnualRevenue), 3), 
7, LEFT(TEXT(AnnualRevenue), 1) &amp; &quot;,&quot; &amp; MID(TEXT(AnnualRevenue), 2,3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(AnnualRevenue), 3), 
8, LEFT(TEXT(AnnualRevenue), 2) &amp; &quot;,&quot; &amp; MID(TEXT(AnnualRevenue), 3,3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(AnnualRevenue), 3), 
9, LEFT(TEXT(AnnualRevenue), 3) &amp; &quot;,&quot; &amp; MID(TEXT(AnnualRevenue), 4,3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(AnnualRevenue), 3), 
10, LEFT(TEXT(AnnualRevenue), 1) &amp; &quot;,&quot; &amp; MID(TEXT(AnnualRevenue), 2,3) &amp; &quot;,&quot; &amp; MID(TEXT(AnnualRevenue), 5, 3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(AnnualRevenue), 3), 
11, LEFT(TEXT(AnnualRevenue), 2) &amp; &quot;,&quot; &amp; MID(TEXT(AnnualRevenue), 3,3) &amp; &quot;,&quot; &amp; MID(TEXT(AnnualRevenue), 6, 3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(AnnualRevenue), 3), 
12, LEFT(TEXT(AnnualRevenue), 3) &amp; &quot;,&quot; &amp; MID(TEXT(AnnualRevenue), 4,3) &amp; &quot;,&quot; &amp; MID(TEXT(AnnualRevenue), 7, 3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(AnnualRevenue), 3), 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSVolume</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_Chapter_Approval_Subject__c</fullName>
        <formula>&quot;Please DocuSign this document: Chapter Approval Request&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DS Chapter Approval Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_Employee__c</fullName>
        <formula>CASE(LEN(TEXT(NumberOfEmployees)),
1, TEXT(NumberOfEmployees),
2, TEXT(NumberOfEmployees),
3, TEXT(NumberOfEmployees),
4, LEFT(TEXT(NumberOfEmployees), 1) &amp; &quot;,&quot; &amp; RIGHT(TEXT(NumberOfEmployees), 3),
5, LEFT(TEXT(NumberOfEmployees), 2) &amp; &quot;,&quot; &amp; RIGHT(TEXT(NumberOfEmployees), 3),
6, LEFT(TEXT(NumberOfEmployees), 3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(NumberOfEmployees), 3),
7, LEFT(TEXT(NumberOfEmployees), 1) &amp; &quot;,&quot; &amp; MID(TEXT(NumberOfEmployees), 2,3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(NumberOfEmployees), 3),
8, LEFT(TEXT(NumberOfEmployees), 2) &amp; &quot;,&quot; &amp; MID(TEXT(NumberOfEmployees), 3,3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(NumberOfEmployees), 3),
9, LEFT(TEXT(NumberOfEmployees), 3) &amp; &quot;,&quot; &amp; MID(TEXT(NumberOfEmployees), 4,3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(NumberOfEmployees), 3),
10, LEFT(TEXT(NumberOfEmployees), 1) &amp; &quot;,&quot; &amp; MID(TEXT(NumberOfEmployees), 2,3) &amp; &quot;,&quot; &amp; MID(TEXT(NumberOfEmployees), 5, 3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(NumberOfEmployees), 3),
11, LEFT(TEXT(NumberOfEmployees), 2) &amp; &quot;,&quot; &amp; MID(TEXT(NumberOfEmployees), 3,3) &amp; &quot;,&quot; &amp; MID(TEXT(NumberOfEmployees), 6, 3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(NumberOfEmployees), 3),
12, LEFT(TEXT(NumberOfEmployees), 3) &amp; &quot;,&quot; &amp; MID(TEXT(NumberOfEmployees), 4,3) &amp; &quot;,&quot; &amp; MID(TEXT(NumberOfEmployees), 7, 3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(NumberOfEmployees), 3),
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DS#Employee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_Firm_Address__c</fullName>
        <formula>TEXT(FIND(&apos;&lt;br/&gt;&apos;,Street))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DS Firm Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DS Lookup</label>
        <referenceTo>dsfs__DocuSign_Status__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DS_Waiver_Request_Subject__c</fullName>
        <formula>&quot;Please DocuSign this document: YPO Waiver Request&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DS Waiver Request Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Status_Change__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date of Last Status Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_in_Awaiting_Chapter_Approval_Status__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Days in Awaiting Chapter Approval Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Closed_Converted_Status_Groups__c</fullName>
        <formula>IF(ISBLANK(Days_in_Closed_Converted_Status__c), &quot;Others&quot;, 
IF(Days_in_Closed_Converted_Status__c &lt; 7, &quot;Age Lead 6 or Less&quot;, 
IF(Days_in_Closed_Converted_Status__c &gt;= 7 &amp;&amp; Days_in_Closed_Converted_Status__c &lt; 15, &quot;Age Lead 7 - 14&quot;, 
IF(Days_in_Closed_Converted_Status__c &gt;= 15 &amp;&amp; Days_in_Closed_Converted_Status__c &lt; 22, &quot;Age Lead 15 - 21&quot;, 
IF(Days_in_Closed_Converted_Status__c &gt;= 22 &amp;&amp; Days_in_Closed_Converted_Status__c &lt; 29, &quot;Age Lead 22 - 28&quot;, 
IF(Days_in_Closed_Converted_Status__c &gt;= 29 &amp;&amp; Days_in_Closed_Converted_Status__c &lt; 36, &quot;Age Lead 29 - 35&quot;, 
IF(Days_in_Closed_Converted_Status__c &gt;= 36 &amp;&amp; Days_in_Closed_Converted_Status__c &lt; 43, &quot;Age Lead 36 - 42&quot;, 
IF(Days_in_Closed_Converted_Status__c &gt;= 43 &amp;&amp; Days_in_Closed_Converted_Status__c &lt; 50, &quot;Age Lead 43 - 49&quot;, 
IF(Days_in_Closed_Converted_Status__c &gt;= 50 &amp;&amp; Days_in_Closed_Converted_Status__c &lt; 101, &quot;Age Lead 50 - 100&quot;, 
IF(Days_in_Closed_Converted_Status__c &gt;= 101, &quot;Age Lead 101+&quot;, &quot;Others&quot;))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days_in_Closed_Converted_Status_Groups</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_in_Closed_Converted_Status__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used in Reporting</description>
        <label>Days in Closed - Converted Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Closed_Existing_Contact_Status__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used in Reporting</description>
        <label>Days in Closed - Existing Contact Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Closed_Unqualified_Status__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used in Reporting</description>
        <label>Days in Closed - Unqualified Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Initial_Qualifying_Status__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used in Reporting</description>
        <label>Days in Initial Qualifying Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_New_Status__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used in Reporting</description>
        <label>Days in New Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Ready_to_Convert_Status__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used in Reporting</description>
        <label>Days in Ready to Convert Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Rejected_Status__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Days in Rejected Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Unverified_Status__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used in Reporting</description>
        <label>Days in Unverified Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Degree_Type__c</fullName>
        <label>Degree Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>AAS</fullName>
                </value>
                <value>
                    <fullName>AB</fullName>
                </value>
                <value>
                    <fullName>ACA</fullName>
                </value>
                <value>
                    <fullName>ADVANCED DEGREE</fullName>
                </value>
                <value>
                    <fullName>AMBEP</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BBA</fullName>
                </value>
                <value>
                    <fullName>BCOM</fullName>
                </value>
                <value>
                    <fullName>BCOMM</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BES</fullName>
                </value>
                <value>
                    <fullName>BFA</fullName>
                </value>
                <value>
                    <fullName>BGS</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BS</fullName>
                </value>
                <value>
                    <fullName>BS/BA</fullName>
                </value>
                <value>
                    <fullName>BSC</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CFE</fullName>
                </value>
                <value>
                    <fullName>CPA</fullName>
                </value>
                <value>
                    <fullName>CPCU</fullName>
                </value>
                <value>
                    <fullName>CVL</fullName>
                </value>
                <value>
                    <fullName>DBA</fullName>
                </value>
                <value>
                    <fullName>DIP</fullName>
                </value>
                <value>
                    <fullName>DOCT</fullName>
                </value>
                <value>
                    <fullName>EDP</fullName>
                </value>
                <value>
                    <fullName>FLDOFSTUDY</fullName>
                </value>
                <value>
                    <fullName>GED</fullName>
                </value>
                <value>
                    <fullName>HBA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DeprecInitial_Qualification_Missing_Info__c</fullName>
        <formula>IF(Deprecated_Initial_Qualification_Score__c =100, &quot;All Details Captured&quot;, &quot;Missing: &quot; &amp; IF(ISPICKVAL(Corp_Type__c,&quot;&quot;), &quot;Corporation Type is missing, &quot;,&quot;&quot;) &amp; 
IF(
OR(
ISNULL(NumberOfEmployees),
AND(NumberOfEmployees &lt;  QC_Number_of_Employees_Opt_1__c,  Tot_Empl_Comp__c &gt;= QC_Total_Employee_Compensation_Opt_1__c ),
AND(NumberOfEmployees &gt;=  QC_Number_of_Employees_Opt_1__c,  Tot_Empl_Comp__c &lt; QC_Total_Employee_Compensation_Opt_1__c )), &quot;Min. Employees must be &quot;&amp; TEXT(QC_Number_of_Employees_Opt_1__c)&amp;&quot;Total Employee Compensation must be $&quot;&amp; TEXT(QC_Total_Employee_Compensation_Opt_1__c)&amp;&quot;; &quot;,&quot;&quot;)&amp;
IF(
OR(
ISNULL(NumberOfEmployees),
AND(NumberOfEmployees &lt;  QC_Number_of_Employees_Opt_2__c,  Tot_Empl_Comp__c &gt;= QC_Total_Employee_Compensation_Opt_2__c ),
AND(NumberOfEmployees &gt;=  QC_Number_of_Employees_Opt_2__c,  Tot_Empl_Comp__c &lt; QC_Total_Employee_Compensation_Opt_2__c )), &quot;Min. Employees must be &quot;&amp; TEXT(QC_Number_of_Employees_Opt_2__c)&amp;&quot;Total Employee Compensation must be $&quot;&amp; TEXT(QC_Total_Employee_Compensation_Opt_2__c)&amp;&quot;; &quot;,&quot;&quot;)&amp;

IF(AND(OR(ISPICKVAL(Corp_Type__c,&quot;Sales&quot;),ISPICKVAL(Corp_Type__c,&quot;Service&quot;) ,ISPICKVAL(Corp_Type__c,&quot;Manufacturing&quot;))&amp;&amp; (AnnualRevenue &lt; QC_Annual_Revenue__c || ISNULL(AnnualRevenue)), Ent_Val__c &lt; QC_Enterprise_Value__c ),&quot;Min. Annual Revenue must be $&quot;&amp; TEXT( QC_Annual_Revenue__c )&amp;&quot; OR Enterprise Value must be $&quot;&amp;TEXT(  QC_Enterprise_Value__c )&amp;&quot;; &quot;,&quot;&quot;)&amp; 
IF(AND(ISPICKVAL( Corp_Type__c, &quot;Financial Institution&quot;) &amp;&amp; (AnnualRevenue &lt;  QC_Annual_Revenue__c || ISNULL(AnnualRevenue)),Ent_Val__c &lt;  QC_Enterprise_Value__c ), &quot;Average Annual Assets must be $&quot;&amp; TEXT(  QC_Annual_Revenue__c  )&amp;&quot; OR Enterprise Value must be $&quot;&amp;TEXT(  QC_Enterprise_Value__c  )&amp;&quot;; &quot;,&quot;&quot;)&amp; 
IF(AND(ISPICKVAL( Corp_Type__c, &quot;Agency-type&quot;) &amp;&amp; (AnnualRevenue &lt;  QC_Annual_Fees__c || ISNULL(AnnualRevenue)),Ent_Val__c &lt;  QC_Enterprise_Value__c ), &quot;Annual Fees or Commissions must be $&quot;&amp; TEXT(  QC_Annual_Fees__c )&amp;&quot; OR Enterprise Value must be $&quot;&amp;TEXT(  QC_Enterprise_Value__c  )&amp;&quot;; &quot;,&quot;&quot;)&amp; 
IF(ISNULL(Birthdate__c),&quot;Birthdate needed &quot;,&quot;&quot;)&amp; 
IF(ISPICKVAL(Title__c,&quot;&quot;),&quot;Title needed&quot;,&quot;&quot;))</formula>
        <label>DeprecInitial Qualification Missing Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deprecated_Business_Status__c</fullName>
        <label>Deprecated_Business Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deprecated_Corporation_Type_Opp__c</fullName>
        <description>Duplicate to map to opportunity on conversion</description>
        <label>Deprecated_Corporation Type (Opp)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deprecated_Enterprise_Type_Opp__c</fullName>
        <description>Duplicate to map to Opportunity</description>
        <label>Deprecated_Enterprise Type (Opp)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deprecated_Enterprise_Value_Opp__c</fullName>
        <description>Duplicate to map to opportunity on conversion</description>
        <label>Deprecated_Enterprise Value (Opp)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deprecated_Initial_Qualification_Score__c</fullName>
        <formula>IF(OR(AND(
NumberOfEmployees &gt;= QC_Number_of_Employees_Opt_1__c, 
Tot_Empl_Comp__c &gt;=  QC_Total_Employee_Compensation_Opt_1__c ),AND( NumberOfEmployees &gt;= QC_Number_of_Employees_Opt_2__c,
Tot_Empl_Comp__c &gt;=  QC_Total_Employee_Compensation_Opt_2__c )), 40,0)

+
IF(OR(
ISPICKVAL(Corp_Type__c,&quot;Sales&quot;),
ISPICKVAL(Corp_Type__c,&quot;Service&quot;),
ISPICKVAL(Corp_Type__c,&quot;Manufacturing&quot;)) 
&amp;&amp; AnnualRevenue &gt;= QC_Annual_Revenue__c , 40,  
IF(ISPICKVAL(Corp_Type__c,&quot;Financial Institution&quot;) &amp;&amp; AnnualRevenue &gt;= QC_Annual_Assets__c , 40, 
IF(ISPICKVAL(Corp_Type__c,&quot;Agency-type&quot;) &amp;&amp; AnnualRevenue &gt;= QC_Annual_Fees__c , 40,  IF(Ent_Val__c &gt;=  QC_Enterprise_Value__c ,40,0))))+
IF(AND(ISPICKVAL(Title__c,&quot;&quot;),ISBLANK(Title_Other__c)), 0, 10)+ 
IF( NOT(ISNULL(Birthdate__c)), 10, 0) + 
IF(ISPICKVAL(Corp_Type__c,&quot;&quot;),-45,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deprecated_Initial Qualification Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deprecated_Is_True_Annual_Revenue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deprecated_Verified - Annual Revenue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deprecated_Is_True_Birthdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deprecated_Verified - Birthdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deprecated_Is_True_Employee_Compensation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deprec_Verified - Employee Compensation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deprecated_Is_True_Enterprise_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deprecated_Verified - Enterprise Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deprecated_Is_True_No_Employees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deprecated_Verified - No. Employees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deprecated_Is_True_Title__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deprecated_Verified - Title</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>